Исправлена досадная ошибка с главным шаблоном

--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -39,7 +39,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a id="menu-brand" class="navbar-brand {% block cloud_active %}{% endblock %}" href="{% url 'index' %}">
+            <a id="menu-brand" class="navbar-brand" href="{% url 'index' %}">
                 <object id="picloud-logo" data="{% static 'img/logo.svg' %}" type="image/svg+xml">
                     <img src="{% static 'img/piLogo.png' %}" alt="PiCloud">
                 </object>
