--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -49,7 +49,7 @@
         <div class="collapse navbar-collapse" id="bs-sidebar-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 {% if user.is_authenticated %}
-                    <li {% block settings_active %}{% endblock %}>
+                    <li>
                         <a href="{% url 'settings' %}">
                             <div id="avatar" style="background-image: url({{ request.session.user_ava_url }})"></div>
                             <h3 style="margin: 0;">{{ user.username }}</h3>
@@ -57,7 +57,7 @@
                     </li>
                 {% endif %}
 
-                <li {% block cloud_active %}{% endblock %}>
+                <li>
                     <a href="{% url 'post_list' %}">
                         Облако
                         <span style="font-size:16px;"
@@ -77,7 +77,7 @@
                     </li>
                 {% endif %}
 
-                <li {% block search_active %}{% endblock %}>
+                <li>
                     <a href="{% url 'search' %}">
                         Поиск
                         <span style="font-size:16px;"
@@ -86,7 +86,7 @@
                     </a>
                 </li>
                 {% if user.is_authenticated %}
-                    <li {% block newpost_active %}{% endblock %}>
+                    <li>
                         <a href="{% url 'post_new' %}">
                             Запостить
                             <span style="font-size:16px;"
@@ -97,7 +97,7 @@
                 {% endif %}
 
                 {% comment %} TODO запилить мемесы
-                        <li {% block memes_active %}{% endblock %}>
+                        <li>
                             <a href="{% url 'memes' %}">
                                 Мемесы
                                 <span style="font-size:16px;"
@@ -107,7 +107,7 @@
                         </li>
                         {% endcomment %}
 
-                <li {% block universities_active %}{% endblock %}>
+                <li>
                     <a href="{% url 'universities_list' %}">
                         Вузы
                         <span style="font-size:16px;"
@@ -115,7 +115,7 @@
                         </span>
                     </a>
                 </li>
-                <li {% block contacts_active %}{% endblock %}>
+                <li>
                     <a href="{% url 'contacts' %}">
                         Обратная связь
                         <span style="font-size:16px;"
@@ -125,7 +125,7 @@
                 </li>
 
                 {% if user.is_superuser or user.is_staff %}
-                    <li {% block validation_active %}{% endblock %} style="background-color: #F4FF81">
+                    <li style="background-color: #F4FF81">
                         <a href="{% url 'validation' %}">
                             Модерация
                             <span style="font-size:16px;"
@@ -156,7 +156,7 @@
                         </a>
                     </li>
                 {% else %}
-                    <li {% block signin_active %}{% endblock %} style="background-color: #CCFFFF">
+                    <li style="background-color: #CCFFFF">
                         <a href="{% url 'signin' %}">
                             Войти
                             <span style="font-size:16px;"
@@ -164,7 +164,7 @@
                             </span>
                         </a>
                     </li>
-                    <li {% block signup_active %}{% endblock %} style="background-color: #CCFFCC">
+                    <li style="background-color: #CCFFCC">
                         <a href="{% url 'signup' %}">
                             Регистрация
                             <span style="font-size:16px;"
