--- a/cloud/templates/auth/signup.html
+++ b/cloud/templates/auth/signup.html
@@ -156,20 +156,20 @@
 
     <script>
         $(document).ready(function () {
-            clear_and_disabled_all_elements();
-            get_all_universities();
+            clearAndDisableAllLists();
+            loadUniversities();
 
             $("#id_university").change(function () {
-                university_updated($(this).val())
+                setUniversity($(this).val())
             });
             $("#id_department").change(function () {
-                department_updated($(this).val())
+                setDepartment($(this).val())
             });
             $("#id_chair").change(function () {
-                chair_updated($(this).val())
+                setChair($(this).val())
             });
             $("#id_program").change(function () {
-                program_updated($(this).val())
+                setProgram($(this).val())
             });
         });
     </script>
