--- a/cloud/templates/search.html
+++ b/cloud/templates/search.html
@@ -54,6 +54,7 @@
 
 {% block js %}
 
+    <script src="{% static 'js/ready.js' %}"></script>
     <script src="{% static "js/imagesloaded.pkgd.min.js" %}"></script>
     <script src="{% static "js/department_search.js" %}"></script>
     <script src="{% static "js/post_list.js" %}"></script>
