--- a/cloud/templates/settings.html
+++ b/cloud/templates/settings.html
@@ -213,10 +213,11 @@
 
 {% block js %}
 
+    <script src="{% static 'js/ready.js' %}"></script>
     <script src="{% static "js/department_search.js" %}"></script>
 
     <script>
-        $(document).ready(function () {
+        ready(function () {
             //установка текущего университета, факультета и кафедры
             {% if user_info.program %}
                 loadUniversities()
