Удалить JSON вложений из шаблона мемов
Я ненамеренно поместил вывод JSON вложений в шаблон.
Этот коммит исправляет данную оплошность.

--- a/cloud/templates/memes.html
+++ b/cloud/templates/memes.html
@@ -22,7 +22,7 @@
                             {% for attachment in meme.attachments %}
                                 {% if attachment.type == 'photo' %}
                                     <img src="{{ attachment.photo.photo_604 }}"
-                                         alt="Прикреплённое изображение {{ attachment }}">
+                                         alt="Прикреплённое изображение">
                                 {% endif %}
                             {% endfor %}
                         </div>
