Изменить неправильно загруженный шрифт на Alegreya

--- a/cloud/static/css/global.css
+++ b/cloud/static/css/global.css
@@ -106,7 +106,7 @@ nav.navbar {
 }
 
 .meme .meme-text {
-    font-family: 'Alegreya Sans', serif;
+    font-family: 'Alegreya', serif;
     font-size: 17px;
     text-align: left;
     white-space: pre-line;
