Упомянуть мемы на лэндинге

--- a/cloud/templates/index.html
+++ b/cloud/templates/index.html
@@ -130,6 +130,17 @@
                 чтобы сделать тексты проще для&nbsp;восприятия.
             </p>
         </div>
+        <div class="advantage">
+            <div class="icon">
+                <i class="fas fa-fire"></i>
+            </div>
+            <h3>Мемчики</h3>
+            <p>
+                Чтобы скрасить бессоную ночь и&nbsp;отвлечься от&nbsp;никак не&nbsp;поддающегося
+                пониманию курсача, зайди в&nbsp;наш раздел с&nbsp;мемами и&nbsp;посмотри на&nbsp;шедевры
+                мемостроителей из&nbsp;избранных сообществ ВКонтакте.
+            </p>
+        </div>
     </div>
 
     <h2>Университеты</h2>
