Использовать иконку «Открыть в новой вкладке»

--- a/cloud/templates/memes.html
+++ b/cloud/templates/memes.html
@@ -31,7 +31,7 @@
                             <a href="https://vk.com/wall{{ meme.from_id }}_{{ meme.id }}"
                                target="_blank" title="Ссылка откроется в новой вкладке.">
                                 Источник
-                                <span class="glyphicon glyphicon-share"></span>
+                                <span class="glyphicon glyphicon-new-window"></span>
                             </a>
                         </p>
                     </div>
