--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -90,7 +90,7 @@
                         <a href="{% url 'post_new' %}">
                             Запостить
                             <span style="font-size:16px;"
-                                  class="pull-right hidden-xs showopacity glyphicon glyphicon-upload">
+                                  class="pull-right hidden-xs showopacity glyphicon glyphicon-plus">
                             </span>
                         </a>
                     </li>
@@ -119,7 +119,7 @@
                     <a href="{% url 'contacts' %}">
                         Обратная связь
                         <span style="font-size:16px;"
-                              class="pull-right hidden-xs showopacity glyphicon glyphicon-phone-alt">
+                              class="pull-right hidden-xs showopacity glyphicon glyphicon-earphone">
                         </span>
                     </a>
                 </li>
@@ -129,7 +129,7 @@
                         <a href="{% url 'validation' %}">
                             Модерация
                             <span style="font-size:16px;"
-                                  class="pull-right hidden-xs showopacity glyphicon glyphicon-certificate">
+                                  class="pull-right hidden-xs showopacity glyphicon glyphicon-check">
                             </span>
                         </a>
                     </li>
