--- a/cloud/templates/settings.html
+++ b/cloud/templates/settings.html
@@ -232,17 +232,17 @@
 
             $("#id_program").attr('required', true);
 
-            $("#id_university").change(function () {
-                setUniversity($(this).val())
+            document.getElementById("id_university").addEventListener("change", () => {
+                universityChanged(document.getElementById("id_university").value);
             });
-            $("#id_department").change(function () {
-                setDepartment($(this).val())
+            document.getElementById("id_department").addEventListener("change", () => {
+                departmentChanged(document.getElementById("id_department").value);
             });
-            $("#id_chair").change(function () {
-                setChair($(this).val())
+            document.getElementById("id_chair").addEventListener("change", () => {
+                chairChanged(document.getElementById("id_chair").value);
             });
-            $("#id_program").change(function () {
-                setProgram($(this).val())
+            document.getElementById("id_program").addEventListener("change", () => {
+                programChanged(document.getElementById("id_program").value);
             });
         });
     </script>
