Назвать модерацию модерацией

--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -126,7 +126,7 @@
 
                 {% if user.is_superuser or user.is_staff %}
                     <li style="background-color: #F4FF81">
-                        <a href="{% url 'validation' %}">
+                        <a href="{% url 'moderation' %}">
                             Модерация
                             <span style="font-size:16px;"
                                   class="pull-right hidden-xs showopacity glyphicon glyphicon-check">
