Реструктурировать панель модерации

--- a/cloud/templates/cloud/post.html
+++ b/cloud/templates/cloud/post.html
@@ -2,25 +2,19 @@
     <div class="post-container">
         {% if editable %}
             {% if user == post.author or user.is_staff or user.is_superuser %}
-                <div>
-                    <a href="{% url 'post_checked' pk=post.pk %}">
-                        <div class="btn btn-success">
-                            <span class="showopacity glyphicon glyphicon-ok"></span>
-                            Одобрить
-                        </div>
+                <nav class="post-moderation">
+                    <a href="{% url 'post_checked' pk=post.pk %}" class="btn btn-success">
+                        <span class="showopacity glyphicon glyphicon-ok"></span>
+                        Одобрить
                     </a>
-                    <a href="{% url 'post_edit' pk=post.pk %}">
-                        <div class="btn btn-warning">
-                            <span class="showopacity glyphicon glyphicon-pencil"></span>
-                        </div>
+                    <a href="{% url 'post_edit' pk=post.pk %}" class="btn btn-warning">
+                        <span class="showopacity glyphicon glyphicon-pencil"></span>
                     </a>
-                    <a href="{% url 'post_delete' pk=post.pk %}">
-                        <div class="btn btn-danger">
-                            <span class="showopacity glyphicon glyphicon-trash"></span>
-                        </div>
+                    <a href="{% url 'post_delete' pk=post.pk %}" class="btn btn-danger">
+                        <span class="showopacity glyphicon glyphicon-trash"></span>
                     </a>
-                </div>
-                <hr>
+                    <hr>
+                </nav>
             {% endif %}
         {% endif %}
         <header>
