Создана страница добавления департаментов

--- a/cloud/templates/structure/universities.html
+++ b/cloud/templates/structure/universities.html
@@ -8,9 +8,7 @@
 
     <div class="container-fluid no-margin-padding">
 
-
-        {% comment %}
-        <a href="#">
+        <a href="{% url 'new_department' %}">
             <div class="universities">
                 <div class="container-fluid">
 
@@ -19,8 +17,6 @@
                 </div>
             </div>
         </a>
-        {% endcomment %}
-
 
         {% for univer in univer_list %}
 
