--- a/cloud/templates/structure/new_department.html
+++ b/cloud/templates/structure/new_department.html
@@ -8,6 +8,14 @@
 
     <div class="container-fluid no-margin-padding">
 
+        <form method="post">
+            {% csrf_token %}
+
+            {{ new_university.as_p }}
+
+            <button type="submit" class="btn btn-default" style="width: 100%">Отправить на модерацию</button>
+        </form>
+
     </div>
 
 {% endblock %}
