--- a/cloud/templates/structure/new_department.html
+++ b/cloud/templates/structure/new_department.html
@@ -8,13 +8,40 @@
 
     <div class="container-fluid no-margin-padding">
 
-        <form method="post">
-            {% csrf_token %}
+        <div class="post-panel panel-settings">
 
-            {{ new_university.as_p }}
+            <hr>
+            <h3>Университет</h3>
+            <hr>
 
-            <button type="submit" class="btn btn-default" style="width: 100%">Отправить на модерацию</button>
-        </form>
+            <form method="post">
+                {% csrf_token %}
+
+                <div class="form-group django-control">
+                    <label class="col-form-label">Полное название</label>
+                    {{ new_university.title }}
+                </div>
+
+                <div class="form-group django-control">
+                    <label class="col-form-label">Аббревиатура</label>
+                    {{ new_university.short_title }}
+                </div>
+
+                <div class="form-group django-control">
+                    <label class="col-form-label">Официальный сайт</label>
+                    {{ new_university.link }}
+                </div>
+
+                <div class="form-group django-control">
+                    <label class="col-form-label">Логотип</label>
+                    {{ new_university.logo }}
+                </div>
+
+                <hr>
+                <button type="submit" class="btn btn-default" style="width: 100%">Отправить на модерацию</button>
+            </form>
+        </div>
+
 
     </div>
 
