--- a/cloud/static/css/global.css
+++ b/cloud/static/css/global.css
@@ -227,3 +227,14 @@ textarea {
     text-align: left;
 }
 
+.structure-panel {
+    padding: 10px;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.structure-panel a{
+    text-decoration: none;
+}
+
