Отображение структур в разделе модерирования

--- a/cloud/templates/cloud/post_list.html
+++ b/cloud/templates/cloud/post_list.html
@@ -24,6 +24,8 @@
         </a>
     </div>
 
+    {% block structure_moderation %}{% endblock %}
+
     {% if posts %}
         <main class="post-list">
             {% for post in posts %}
