--- a/cloud/templates/moderation.html
+++ b/cloud/templates/moderation.html
@@ -10,6 +10,28 @@
     <link rel="stylesheet" href="{% static 'css/moderation.css' %}">
 {% endblock %}
 
+{% block structure_moderation %}
+
+    <div class="row" style="margin: 5px">
+            {% for structure in universities %}
+            {% include "cloud/structure.html" %}
+            {% endfor %}
+            {% for structure in departments %}
+                {% include "cloud/structure.html" %}
+            {% endfor %}
+            {% for structure in chairs %}
+                {% include "cloud/structure.html" %}
+            {% endfor %}
+            {% for structure in programs %}
+                {% include "cloud/structure.html" %}
+            {% endfor %}
+            {% for structure in subjects %}
+                {% include "cloud/structure.html" %}
+            {% endfor %}
+    </div>
+
+{% endblock %}
+
 {% block content %}
     {% with editable=True %}
         {{ block.super }}
