Добавление департаментов разделено по страницам

--- a/cloud/templates/structure/universities.html
+++ b/cloud/templates/structure/universities.html
@@ -8,7 +8,7 @@
 
     <div class="container-fluid no-margin-padding">
 
-        <a href="{% url 'new_structure' %}">
+        <a href="{% url 'new_university' %}">
             <div class="universities">
                 <div class="container-fluid">
 
