--- a/cloud/templates/moderation.html
+++ b/cloud/templates/moderation.html
@@ -10,36 +10,51 @@
     <link rel="stylesheet" href="{% static 'css/moderation.css' %}">
 {% endblock %}
 
-{% block structure_moderation %}
 
-    <div class="row" style="margin: 5px">
-            {% for structure in universities %}
-            {% include "cloud/structure.html" %}
-            {% endfor %}
-            {% for structure in departments %}
-                {% include "cloud/structure.html" %}
-            {% endfor %}
-            {% for structure in chairs %}
-                {% include "cloud/structure.html" %}
-            {% endfor %}
-            {% for structure in programs %}
-                {% include "cloud/structure.html" %}
-            {% endfor %}
-            {% for structure in subjects %}
-                {% include "cloud/structure.html" %}
-            {% endfor %}
+{% block content %}
+
+    <div class="moderation-container">
+        <ul class="nav nav-pills">
+            <li class="active"><a data-toggle="tab" href="#posts">Посты</a></li>
+            <li><a data-toggle="tab" href="#structures">Подразделения</a></li>
+        </ul>
+
+        <div class="tab-content">
+
+            <div id="posts" class="tab-pane fade in active">
+                {% with editable=True %}
+                    {{ block.super }}
+                {% endwith %}
+            </div>
+
+            <div id="structures" class="tab-pane fade">
+                <div class="row" style="margin: 5px">
+                    {% for structure in universities %}
+                        {% include "cloud/structure.html" %}
+                    {% endfor %}
+                    {% for structure in departments %}
+                        {% include "cloud/structure.html" %}
+                    {% endfor %}
+                    {% for structure in chairs %}
+                        {% include "cloud/structure.html" %}
+                    {% endfor %}
+                    {% for structure in programs %}
+                        {% include "cloud/structure.html" %}
+                    {% endfor %}
+                    {% for structure in subjects %}
+                        {% include "cloud/structure.html" %}
+                    {% endfor %}
+                </div>
+            </div>
+
+        </div>
     </div>
 
 {% endblock %}
 
-{% block content %}
-    {% with editable=True %}
-        {{ block.super }}
-    {% endwith %}
-{% endblock %}
 
 {% block emptyloop %}
-    <div class="post-panel">
+    <div class="post-panel panel-settings">
         <h4>
             <hr>
             Здесь будут появляться еще не проверенные посты.
@@ -51,3 +66,9 @@
         </h4>
     </div>
 {% endblock %}
+
+
+
+
+
+
