--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="{% static 'css/global.css' %}">
     <link rel="stylesheet" href="{% static 'css/menu.css' %}">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&amp;subset=cyrillic" rel="stylesheet">
 
     <link rel="icon" href="{% static 'img/favicon.png' %}">
 
