--- a/cloud/static/css/post_list.css
+++ b/cloud/static/css/post_list.css
@@ -24,8 +24,28 @@ body {
 }
 
 .post-list article .post-container .text {
-    font-family: 'Alegreya', serif;
+    font-family: 'Alegreya Sans', sans-serif;
     text-align: left;
+}
+
+article .post-container .text h1 {
+    font-family: 'Alegreya', serif;
+    font-size: 2.0rem;
+}
+
+article .post-container .text h2 {
+    font-family: 'Alegreya', serif;
+    font-size: 1.8rem;
+}
+
+article .post-container .text h3 {
+    font-family: 'Alegreya', serif;
+    font-size: 1.5rem;
+}
+
+article .post-container .text h4 {
+    font-family: 'Alegreya', serif;
+    font-size: 1.3rem;
 }
 
 .post-list article .post-container footer {
