--- a/cloud/static/css/post_list.css
+++ b/cloud/static/css/post_list.css
@@ -25,27 +25,28 @@ body {
 
 .post-list article .post-container .text {
     font-family: 'Alegreya Sans', sans-serif;
+    font-size: 1.3rem;
     text-align: left;
 }
 
 article .post-container .text h1 {
     font-family: 'Alegreya', serif;
-    font-size: 2.0rem;
+    font-size: 2.0em;
 }
 
 article .post-container .text h2 {
     font-family: 'Alegreya', serif;
-    font-size: 1.8rem;
+    font-size: 1.8em;
 }
 
 article .post-container .text h3 {
     font-family: 'Alegreya', serif;
-    font-size: 1.5rem;
+    font-size: 1.5em;
 }
 
 article .post-container .text h4 {
     font-family: 'Alegreya', serif;
-    font-size: 1.3rem;
+    font-size: 1.3em;
 }
 
 .post-list article .post-container footer {
