--- a/cloud/static/css/post_list.css
+++ b/cloud/static/css/post_list.css
@@ -25,7 +25,7 @@ body {
 
 .post-list article .post-container .text {
     font-family: 'Alegreya Sans', sans-serif;
-    font-size: 1.3rem;
+    font-size: 15px; /* FIXME: Use relative units once possible */
     text-align: left;
 }
 
