--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -17,7 +17,7 @@
 
     <link rel="stylesheet" href="{% static 'css/global.css' %}">
     <link rel="stylesheet" href="{% static 'css/menu.css' %}">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,400i,700,700i|Alegreya:400,400i,700,700i|Roboto+Slab:400,700&amp;subset=cyrillic">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,400i,700,700i|Alegreya:400,400i,500,500i,700,700i|Roboto+Slab:400,700&amp;subset=cyrillic">
 
     <link rel="icon" href="{% static 'img/favicon.png' %}">
 
